# esp32_rust_vs_cpp

./: README.md
cpp_version/: CMakeLists.txt  demo_concurrency.cpp  demo_mem_safety.cpp
cpp_version/main/: CMakeLists.txt  concurrency.cpp  main.cpp
cpp_version/main/demos/: demo.h  demo_concurrency.cpp  demo_mem_safety.cpp  student.cpp  student.h
cpp_version/main/rust_lib/: concurrency_lib.h
interoperability/cpp_app/: CMakeLists.txt  main.cpp
interoperability/rust_concurrency_lib/: Cargo.toml
interoperability/rust_concurrency_lib/src/: lib.rs
rust_prototypes/: concurrency.rs
rust_version/: concurrency.rs  memory_safety.rs
